/* Copyright 2020-2023 The Loimos Project Developers.
 * See the top-level LICENSE file for details.
 *
 * SPDX-License-Identifier: MIT
 */

syntax = "proto3";
package loimos.proto;
import "distribution.proto";

message DataField {
  string field_name = 1;

  message Empty {
  }

  message Category {
    repeated int32 values = 1;
  }

  oneof data_type {
    Empty unique_id = 2;
    Empty foreign_id = 3;
    Empty start_time = 4;
    Empty duration = 5;
    Empty bool = 6;
    Empty int32 = 7;
    Empty int64 = 8;
    Empty uint32 = 9;
    Empty uint64 = 10;
    Empty double = 11;
    Empty ignore = 13;
    Empty string = 14;
    Category category = 15;
  }

  oneof default_value {
    bool default_bool = 16;
    int32 default_int32 = 17;
    int64 default_int64 = 18;
    uint32 default_uint32 = 19;
    uint64 default_uint64 = 20;
    double default_double = 21;
    string default_string = 22;
  }
}

message CSVDefinition {
  repeated DataField fields = 1;
  int64 num_rows = 2;
  TimeDef range = 3;
  string load_column = 4;
  repeated int64 partition_offsets = 5;
}
